added BERTQA, assistant, teacher, and student

--- a/Regularization.ipynb
+++ b/Regularization.ipynb
@@ -2,11 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 16,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-05-29T16:04:03.175097Z",
-     "start_time": "2020-05-29T16:04:03.167745Z"
+     "end_time": "2020-06-01T16:27:32.640111Z",
+     "start_time": "2020-06-01T16:27:32.625389Z"
     },
     "code_folding": []
    },
@@ -37,47 +37,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 37,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-05-29T16:04:07.276349Z",
-     "start_time": "2020-05-29T16:04:03.176693Z"
+     "end_time": "2020-06-01T16:30:32.478623Z",
+     "start_time": "2020-06-01T16:30:32.434162Z"
     },
     "code_folding": [
      86,
      89
     ]
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "05/29/2020 16:04:03 - INFO - transformers.file_utils -   PyTorch version 1.4.0 available.\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Better speed can be achieved with apex installed from https://www.github.com/nvidia/apex.\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "05/29/2020 16:04:07 - INFO - transformers.file_utils -   TensorFlow version 2.1.0 available.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from BERTQG.token_generation import load_model, generate_token\n",
     "from Regularization_module import Regularizer_Discriminator\n",
     "from itertools import groupby\n",
     "\n",
     "class QuestionGeneration():\n",
-    "    def __init__(self, bert_model, lm_gq, uqa_qg, regularization=None):\n",
+    "    def __init__(self, bert_model, lm_qg, uqa_qg, regularization=None):\n",
     "        self.lm_qg, _, _ = load_model(bert_model, lm_qg)\n",
     "        self.uqa_qg, self.tokenizer, self.device = load_model(bert_model, uqa_qg)\n",
     "#         self.regularization = Random_Regularization()\n",
@@ -173,11 +151,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 38,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-05-29T16:04:24.952462Z",
-     "start_time": "2020-05-29T16:04:12.515806Z"
+     "end_time": "2020-06-01T16:30:40.958816Z",
+     "start_time": "2020-06-01T16:30:32.668730Z"
     }
    },
    "outputs": [
@@ -185,9 +163,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "05/29/2020 16:04:12 - INFO - BERTQG.tokenization -   loading vocabulary file BERTQG/models/bert-base-uncased/vocab.txt\n",
-      "05/29/2020 16:04:14 - INFO - BERTQG.modeling -   loading archive file BERTQG/models/bert-base-uncased\n",
-      "05/29/2020 16:04:14 - INFO - BERTQG.modeling -   Model config {\n",
+      "06/01/2020 16:30:32 - INFO - BERTQG.tokenization -   loading vocabulary file BERTQG/models/bert-base-uncased/vocab.txt\n",
+      "06/01/2020 16:30:32 - INFO - BERTQG.modeling -   loading archive file BERTQG/models/bert-base-uncased\n",
+      "06/01/2020 16:30:32 - INFO - BERTQG.modeling -   Model config {\n",
       "  \"attention_probs_dropout_prob\": 0.1,\n",
       "  \"hidden_act\": \"gelu\",\n",
       "  \"hidden_dropout_prob\": 0.1,\n",
@@ -207,6 +185,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "BERTQG/models/lm_10k_QG/pytorch_model.bin\n",
       "Load BERTQG/models/lm_10k_QG/pytorch_model.bin\n"
      ]
     },
@@ -214,9 +193,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "05/29/2020 16:04:15 - INFO - BERTQG.tokenization -   loading vocabulary file BERTQG/models/bert-base-uncased/vocab.txt\n",
-      "05/29/2020 16:04:15 - INFO - BERTQG.modeling -   loading archive file BERTQG/models/bert-base-uncased\n",
-      "05/29/2020 16:04:15 - INFO - BERTQG.modeling -   Model config {\n",
+      "06/01/2020 16:30:34 - INFO - BERTQG.tokenization -   loading vocabulary file BERTQG/models/bert-base-uncased/vocab.txt\n",
+      "06/01/2020 16:30:34 - INFO - BERTQG.modeling -   loading archive file BERTQG/models/bert-base-uncased\n",
+      "06/01/2020 16:30:34 - INFO - BERTQG.modeling -   Model config {\n",
       "  \"attention_probs_dropout_prob\": 0.1,\n",
       "  \"hidden_act\": \"gelu\",\n",
       "  \"hidden_dropout_prob\": 0.1,\n",
@@ -243,8 +222,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "05/29/2020 16:04:18 - INFO - transformers.configuration_utils -   loading configuration file https://s3.amazonaws.com/models.huggingface.co/bert/bert-base-uncased-config.json from cache at /root/.cache/torch/transformers/4dad0251492946e18ac39290fcfe91b89d370fee250efe9521476438fe8ca185.7156163d5fdc189c3016baca0775ffce230789d7fa2a42ef516483e4ca884517\n",
-      "05/29/2020 16:04:18 - INFO - transformers.configuration_utils -   Model config BertConfig {\n",
+      "06/01/2020 16:30:37 - INFO - transformers.configuration_utils -   loading configuration file https://s3.amazonaws.com/models.huggingface.co/bert/bert-base-uncased-config.json from cache at /root/.cache/torch/transformers/4dad0251492946e18ac39290fcfe91b89d370fee250efe9521476438fe8ca185.7156163d5fdc189c3016baca0775ffce230789d7fa2a42ef516483e4ca884517\n",
+      "06/01/2020 16:30:37 - INFO - transformers.configuration_utils -   Model config BertConfig {\n",
       "  \"_num_labels\": 2,\n",
       "  \"architectures\": [\n",
       "    \"BertForMaskedLM\"\n",
@@ -300,9 +279,9 @@
       "  \"vocab_size\": 30522\n",
       "}\n",
       "\n",
-      "05/29/2020 16:04:19 - INFO - transformers.tokenization_utils -   loading file https://s3.amazonaws.com/models.huggingface.co/bert/bert-base-uncased-vocab.txt from cache at /root/.cache/torch/transformers/26bc1ad6c0ac742e9b52263248f6d0f00068293b33709fae12320c0e35ccfbbb.542ce4285a40d23a559526243235df47c5f75c197f04f37d1a0c124c32c9a084\n",
-      "05/29/2020 16:04:20 - INFO - transformers.configuration_utils -   loading configuration file https://s3.amazonaws.com/models.huggingface.co/bert/bert-base-uncased-config.json from cache at /root/.cache/torch/transformers/4dad0251492946e18ac39290fcfe91b89d370fee250efe9521476438fe8ca185.7156163d5fdc189c3016baca0775ffce230789d7fa2a42ef516483e4ca884517\n",
-      "05/29/2020 16:04:20 - INFO - transformers.configuration_utils -   Model config BertConfig {\n",
+      "06/01/2020 16:30:38 - INFO - transformers.tokenization_utils -   loading file https://s3.amazonaws.com/models.huggingface.co/bert/bert-base-uncased-vocab.txt from cache at /root/.cache/torch/transformers/26bc1ad6c0ac742e9b52263248f6d0f00068293b33709fae12320c0e35ccfbbb.542ce4285a40d23a559526243235df47c5f75c197f04f37d1a0c124c32c9a084\n",
+      "06/01/2020 16:30:39 - INFO - transformers.configuration_utils -   loading configuration file https://s3.amazonaws.com/models.huggingface.co/bert/bert-base-uncased-config.json from cache at /root/.cache/torch/transformers/4dad0251492946e18ac39290fcfe91b89d370fee250efe9521476438fe8ca185.7156163d5fdc189c3016baca0775ffce230789d7fa2a42ef516483e4ca884517\n",
+      "06/01/2020 16:30:39 - INFO - transformers.configuration_utils -   Model config BertConfig {\n",
       "  \"_num_labels\": 2,\n",
       "  \"architectures\": [\n",
       "    \"BertForMaskedLM\"\n",
@@ -945,11 +924,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 12,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-05-29T16:04:25.892799Z",
-     "start_time": "2020-05-29T16:04:24.953813Z"
+     "end_time": "2020-06-01T15:50:08.904059Z",
+     "start_time": "2020-06-01T15:50:08.026495Z"
     }
    },
    "outputs": [],
@@ -1133,7 +1112,7 @@
     "from itertools import groupby\n",
     "\n",
     "class QuestionGeneration():\n",
-    "    def __init__(self, bert_model, final_gq):\n",
+    "    def __init__(self, bert_model, final_qg):\n",
     "        self.final_qg, self.tokenizer, self.device = load_model(bert_model, final_qg)\n",
     "        \n",
     "    def generate_question(self, context: str, ans: str, ans_start: str, wh_word: str, list_question_tokens: list = []) -> str:\n",
